fixed overflow x sds project

--- a/app/projects/sds-project/page.module.css
+++ b/app/projects/sds-project/page.module.css
@@ -11,6 +11,7 @@
     align-items: center;
     height: auto;
     margin-top: 50px;
+    overflow-x: hidden;
 }
 
 .project-header {
